--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
         "axios": "^0.18.1",
         "core-js": "^3.6.5",
         "element-ui": "^2.13.2",
+        "js-cookie": "^2.2.0",
+        "normalize.css": "^7.0.0",
+        "nprogress": "^0.2.0",
+        "path-to-regexp": "^2.4.0",
         "vue": "^2.5.2",
         "vue-router": "^3.0.1",
         "vuex": "^3.1.0"
